# error-consistency

./: .flake8  .gitignore  README.ipynb  README.md  README.rst  clean_job_scripts.sh  cluster_test.py  cluster_test2.py  generate_aug_job_scripts.sh  generate_job_scripts.sh  pyclean.sh  pyclean_file.sh  pyproject.toml  pytest.ini  submit_all_job_scripts.sh  submit_asha.sh  submit_asha_evaluate.sh  submit_efficientnet.sh  submit_mlp_downsampling.sh  tensorboard.sh  watch_cc_jobs.sh
analysis/: constants.py  downsampling.py  downsampling_jobscripts.py  downsampling_plot.py  downsampling_setup.py  feature_downsampling.py  feature_selection.py  loading.py
analysis/covid/: arguments.py  custom_layers.py  datamodule.py  efficientnet.py  generate_jobscripts.py  hypertune.py  hypertune_results.py  lr_scheduling.py  model.py  preprocessing.py  resnet.py  transforms.py
analysis/job_scripts/: submit__tensorboard.sh  submit_all_downsampling.sh  submit_all_feature.sh  submit_all_feature_local.sh  submit_mlp_feature.sh
docs/: BUILD_NOTES.md  conf.py  consistency.rst  containers.rst  coreapi.rst  functional.rst  index.rst  model.rst  theory.rst
docs/_static/: overrides.css  style_force.js
error_consistency/: consistency.py  constants.py  containers.py  functional.py  model.py  parallel.py  random.py  utils.py
tests/: loading.py  test_analysis_downsampling.py  test_analysis_hypertune.py  test_consistency.py  test_dataloading.py  test_datasets.py  test_deep.py  test_downsampling.py  test_ec_distribution.py  test_error_consistency.py  test_functional.py  testutils.py
(+175 files in other folders)
